fix overflowing text

--- a/css/bookblock.css
+++ b/css/bookblock.css
@@ -254,7 +254,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	font-size: 1.25em;
+	font-size: 2.5vh;
 	line-height: 1.5em;
 	width:70%;
 	text-align: center;
